# switcheroo

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build.sh  mise.toml
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.ts
src/: config.rs  downloads.rs  main.rs  metadata.rs  scanner.rs  state.rs  tasks.rs  tinfoil.rs  webdav.rs
src/handlers/: api.rs  dbi.rs  files.rs  mod.rs  tinfoil.rs  web.rs
