[package]
name = "switcheroo"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
config = "0.15.19"
dotenvy = "0.15.7"
futures = "0.3.31"
local-ip-address = "0.6.10"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["net", "sync"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.8", features = ["fs", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"
